change img directory

--- a/boundary/admin_profilePage.html
+++ b/boundary/admin_profilePage.html
@@ -81,7 +81,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu" data-accordion="false ">
                         <li class="nav-item">
                             <a href="admin_addUserPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add user
                                 </p>
@@ -89,7 +89,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_addUserProfile.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add user profile
 
@@ -99,7 +99,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
                                     Search user
 
@@ -109,7 +109,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserProfilePage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
                                     Search user profile
 
@@ -120,7 +120,7 @@
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
                             <a href="admin_profilePage.html" class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_profile_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
 
@@ -129,7 +129,7 @@
                         </li>
                         <li class="nav-item ">
                             <a href="pages/widgets.html " class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_logout_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_logout_icon.svg"></i>
                                 <p class="navHeader">
                                     Logout
                                 </p>
