--- a/boundary/admin_searchUserProfilePage.html
+++ b/boundary/admin_searchUserProfilePage.html
@@ -80,7 +80,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
                         <li class="nav-item">
                             <a href="admin_addUserPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add user
                                 </p>
@@ -88,7 +88,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_addUserProfile.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add user profile
 
@@ -98,7 +98,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
                                     Search user
                                 </p>
@@ -106,7 +106,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserProfilePage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
                                     Search user profile
                                 </p>
@@ -115,7 +115,7 @@
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
                             <a href="admin_profilePage.html" class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_profile_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
                                 </p>
@@ -123,7 +123,7 @@
                         </li>
                         <li class="nav-item ">
                             <a href="pages/widgets.html " class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_logout_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_logout_icon.svg"></i>
                                 <p class="navHeader">
                                     Logout
                                 </p>
