--- a/boundary/author_profilePage.html
+++ b/boundary/author_profilePage.html
@@ -81,7 +81,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
                         <li class="nav-item">
                             <a href="" class="nav-link">
-                                <i class="nav-icon"><img src="img/nav_home_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_home_icon.svg"></i>
                                 <p class="navHeader">
                                     Home
                                 </p>
@@ -89,7 +89,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="author_addPaperPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add paper
                                 </p>
@@ -98,7 +98,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="author_searchPaperPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
                                     Search paper
                                 </p>
@@ -107,7 +107,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="author_emailPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/email.png"></i>
+                                <i class="nav-icon"><img src="../img/email.png"></i>
                                 <p class="navHeader">
                                     View email
                                 </p>
@@ -116,7 +116,7 @@
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
                             <a href="author_profilePage.html" class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_profile_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
 
@@ -125,7 +125,7 @@
                         </li>
                         <li class="nav-item ">
                             <a href="pages/widgets.html " class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_logout_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_logout_icon.svg"></i>
                                 <p class="navHeader">
                                     Logout
                                 </p>
