--- a/boundary/admin_searchUserPage.html
+++ b/boundary/admin_searchUserPage.html
@@ -80,7 +80,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
                         <li class="nav-item">
                             <a href="admin_addUserPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add user
                                 </p>
@@ -88,7 +88,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_addUserProfile.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add user profile
                                 </p>
@@ -96,7 +96,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
                                     Search user
                                 </p>
@@ -104,7 +104,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserProfilePage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
                                     Search user profile
                                 </p>
@@ -113,7 +113,7 @@
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
                             <a href="admin_profilePage.html" class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_profile_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
 
@@ -122,7 +122,7 @@
                         </li>
                         <li class="nav-item ">
                             <a href="pages/widgets.html " class="nav-link ">
-                                <i class="nav-icon"><img src="img/nav_logout_icon.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_logout_icon.svg"></i>
                                 <p class="navHeader">
                                     Logout
                                 </p>
