update style directory

--- a/boundary/admin_searchUserProfilePage.html
+++ b/boundary/admin_searchUserProfilePage.html
@@ -16,7 +16,7 @@
     <!--    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css">-->
     <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <title>Admin</title>
     <style>
         div {
@@ -261,7 +261,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <img style="margin-left: 10px; margin-top: 20px" src="img/blue arrow.svg" data-dismiss="modal" aria-label="Close"></i>
+                    <img style="margin-left: 10px; margin-top: 20px" src="../img/blue arrow.svg" data-dismiss="modal" aria-label="Close"></i>
                     <p style="font-size:20px; color: #109CF1;margin-top: 15px; margin-left: 15px; display: inline;">Edit User Profile</p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -300,15 +300,16 @@
 
 
 
+
+
+                </div>
+                <div class="modal-footer " style="border: none; ">
                     <button type="button " style="float: right " class="white_btn " data-dismiss="modal " aria-label="Close ">
                         Back
                     </button>
                     <button type="button " style="float: right; color: white; margin-right: 10px; " class="blue_btn " data-toggle="modal " data-target="#saveModal ">
                         Save
                     </button>
-
-                </div>
-                <div class="modal-footer " style="border: none; ">
                 </div>
             </div>
         </div>
