--- a/boundary/author_addPaperPage.html
+++ b/boundary/author_addPaperPage.html
@@ -174,8 +174,8 @@
                             Add paper</p>
                     </div>
                     <div style="padding: 30px;">
-                        <div class="form-group">
-                            <label for="inputPaperName" class="col-sm-2 ">Paper name:</label>
+                        <div class="form-group" style="display: flex;">
+                            <label for="inputPaperName" class="searchLeft col-sm-2 ">Paper name:</label>
                             <div class="col-sm-4">
                                 <input type="text" class="form-control inlineBlock" id="author_paperName">
                             </div>
@@ -198,20 +198,19 @@
                             <!-- <label for="exampleInputFile">File input</label> -->
                         </div>
                         <div class="form-group">
-                            <label class="searchLeft col-sm-2" for=" exampleInputFile ">File input</label>
-                            <div class=" col-sm-4 inlineBlock ">
-                                <div class="input-group ">
-                                    <div class="custom-file ">
-                                        <input type="file " class="custom-file-input " id="exampleInputFile ">
-                                        <label class="custom-file-label " for="exampleInputFile ">Choose file</label>
+                            <label class="searchLeft col-sm-2" for="exampleInputFile">File input</label>
+                            <div class="col-sm-4 inlineBlock">
+                                <div class="input-group">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="exampleInputFile">
+                                        <label class="custom-file-label" for="exampleInputFile">Choose file</label>
                                     </div>
-                                    <div class="input-group-append ">
-                                        <span class="input-group-text ">Upload</span>
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">Upload</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
 
                     </div>
                 </div>
