--- a/boundary/author_profilePage.html
+++ b/boundary/author_profilePage.html
@@ -124,7 +124,7 @@
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="pages/widgets.html " class="nav-link ">
+                            <a href="../boundary/login_page.php" class="nav-link ">
                                 <i class="nav-icon"><img src="../img/nav_logout_icon.svg"></i>
                                 <p class="navHeader">
                                     Logout
