--- a/boundary/author_searchPaperPage.html
+++ b/boundary/author_searchPaperPage.html
@@ -201,7 +201,7 @@
                             <tbody>
                                 <tr>
                                     <td>12345678</td>
-                                    <td>Mike Doe</td>
+                                    <td>PaperA</td>
                                     <!-- <td>Author</td> -->
                                     <td>
                                         <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#searchPaperModal">
@@ -222,7 +222,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <div style="margin-top: 25px; float:left;width: 3px;height: 28px; background: #FED666;"></div>
-                        <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">User has been added successfully</p>
+                        <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Edit paper</p>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -236,7 +236,7 @@
                         <p>Paper name:&nbsp;</p>
                         <div class="detail">
                             <!-- get userFullName from DB-->
-                            <label class="author_searchPaperName">Mike Doe</label>
+                            <label class="author_searchPaperName">PaperA</label>
                         </div>
 
                         <button type="button" class="blue_btn" data-toggle="modal" data-target="#editPaperModal" id="author_editDetail_btn">
@@ -318,7 +318,7 @@
                         <p>Paper name:&nbsp;</p>
                         <div class="detail">
                             <!-- get userFullName from DB-->
-                            <label class="author_deletePaperName">Mike Doe</label>
+                            <label class="author_deletePaperName">PaperA</label>
                         </div>
 
                         <p class="deleteText">Deleting this paper mean you would be able to resubmit the correct version.</p>
