--- a/boundary/author_addPaperPage.html
+++ b/boundary/author_addPaperPage.html
@@ -192,24 +192,6 @@
                             <option>Conference5</option>
                             </select>
                         </div>
-                        <!-- <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>Minimal</label>
-                                        <select class="form-control select2" style="width: 100%;" multiple="multiple">
-                            <option selected="selected">Alabama</option>
-                            <option>Alaska</option>
-                            <option>California</option>
-                            <option>Delaware</option>
-                            <option>Tennessee</option>
-                            <option>Texas</option>
-                            <option>Washington</option>
-                            </select>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="form-group">
 
                             <label class="searchLeft col-sm-2 ">Select author </label>
@@ -237,6 +219,7 @@
                                 </div>
                             </div>
                         </div>
+                        <input type="button" class="detail_action_btn" data-toggle="modal" data-target="#addPaperModal" value="Add Paper">
 
                     </div>
                 </div>
