update cos bootstrap modal buggy

--- a/boundary/author_searchPaperPage.html
+++ b/boundary/author_searchPaperPage.html
@@ -195,7 +195,6 @@
                                     <th>Paper Name</th>
                                     <!-- <th>User Profile</th> -->
                                     <th>Action</th>
-                                    <th>Paper Review and Rating</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -204,15 +203,13 @@
                                     <td>PaperA</td>
                                     <!-- <td>Author</td> -->
                                     <td>
-                                        <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#searchPaperModal">
+                                        <a href="author_viewPaperPage.html">
+                                            <button type="button" class="detail_action_btn" data-toggle="modal">
                                             Details
                                         </button>
+                                        </a>
                                     </td>
-                                    <td>
-                                        <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#searchPaperModal">
-                                            View
-                                        </button>
-                                    </td>
+
 
                                 </tr>
 
