--- a/boundary/author_searchPaperPage.html
+++ b/boundary/author_searchPaperPage.html
@@ -48,20 +48,22 @@
                         <i class="far fa-bell"></i>
                         <!-- <i class="fa-solid fa-bell"></i> -->
                         <!-- <span class="badge badge-warning navbar-badge">15</span> -->
-                        <span class="sss">15</span>
 
-
+                        <!-- retrieve number of email notification-->
+                        <span class="author_notiNo" class="author_noOfEmailNoti">4</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                         <span class="dropdown-item dropdown-header">
-                            <span id="author_noOfEmailNoti">
+                             <!-- retrieve number of email notification-->
+                            <span class="author_noOfEmailNoti">
                                 4
                             </span> Notifications
                         </span>
                         <div class="dropdown-divider"></div>
                         <a href="author_emailPage.html" class="dropdown-item">
                             <i class="fas fa-envelope mr-2"></i>
-                            <span id="author_noOfEmailNoti">
+                            <!-- retrieve number of email notification-->
+                            <span class="author_noOfEmailNoti">
                                 4
                             </span> new emails
                             <!-- <span class="float-right text-muted text-sm">3 mins</span> -->
@@ -106,14 +108,14 @@
 
                 <nav class=" mt-2 ">
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_home_icon.svg"></i>
                                 <p class="navHeader">
                                     Home
                                 </p>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item active">
                             <a href="author_addPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/add.svg"></i>
@@ -389,11 +391,11 @@
 
                 $('#author_searchPaper').DataTable({
                     "paging ": true,
-                    "lengthChange ": true,
-                    "searching ": true,
-                    "ordering ": true,
-                    "info ": true,
-                    "autoWidth ": true,
+                    "lengthChange ": false,
+                    "searching ": false,
+                    "ordering ": false,
+                    "info ": false,
+                    "autoWidth ": false,
                     "responsive ": true,
                 });
                 //Initialize Select2 Elements
