--- a/boundary/author_viewPaperPage.html
+++ b/boundary/author_viewPaperPage.html
@@ -42,7 +42,36 @@
 
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" data-toggle="dropdown" href="#">
+                        <i class="far fa-bell"></i>
+                        <!-- <i class="fa-solid fa-bell"></i> -->
+                        <!-- <span class="badge badge-warning navbar-badge">15</span> -->
 
+                        <!-- retrieve number of email notification-->
+                        <span class="author_notiNo" class="author_noOfEmailNoti">4</span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                        <span class="dropdown-item dropdown-header">
+                             <!-- retrieve number of email notification-->
+                            <span class="author_noOfEmailNoti">
+                                4
+                            </span> Notifications
+                        </span>
+                        <div class="dropdown-divider"></div>
+                        <a href="author_emailPage.html" class="dropdown-item">
+                            <i class="fas fa-envelope mr-2"></i>
+                            <!-- retrieve number of email notification-->
+                            <span class="author_noOfEmailNoti">
+                                4
+                            </span> new emails
+                            <!-- <span class="float-right text-muted text-sm">3 mins</span> -->
+                        </a>
+
+                        <div class="dropdown-divider"></div>
+                        <a href="author_emailPage.html" class="dropdown-item dropdown-footer">See All Notifications</a>
+                    </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                         <i class="fas fa-expand-arrows-alt"></i>
@@ -315,7 +344,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <img style="margin-left: 10px; margin-top: 20px" src="../img/blue arrow.svg" data-dismiss="modal" aria-label="Close"></i>
-                    <p style="font-size:20px; color: #109CF1;margin-top: 15px; margin-left: 15px; display: inline;">Edit User Details</p>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 15px; margin-left: 15px; display: inline;">Edit Paper Details</p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -413,11 +442,17 @@
             $('#searchUser').DataTable({
                 "paging ": true,
                 "lengthChange ": true,
-                "searching ": true,
+                "searching ": false,
                 "ordering ": true,
                 "info ": true,
                 "autoWidth ": true,
                 "responsive ": true,
+            });
+            //Initialize Select2 Elements
+            $('.select2').select2();
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
             });
         });
     </script>
