--- a/boundary/author_emailPage.html
+++ b/boundary/author_emailPage.html
@@ -106,14 +106,14 @@
 
                 <nav class=" mt-2 ">
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_home_icon.svg"></i>
                                 <p class="navHeader">
                                     Home
                                 </p>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item active">
                             <a href="author_addPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/add.svg"></i>
